Resolves: fdo#32177 add a modification listener on new XDocumentProperties